--- a/Simple Python CLI Chat/Interactive Chat and Token Cost Calculation/task-info.yaml
+++ b/Simple Python CLI Chat/Interactive Chat and Token Cost Calculation/task-info.yaml
@@ -13,5 +13,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/478/stages/2737/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Thu, 14 Aug 2025 09:14:08 UTC"
 record: -1
