--- a/Simple Python CLI Chat/Setting Up the Chat Assistant/task-info.yaml
+++ b/Simple Python CLI Chat/Setting Up the Chat Assistant/task-info.yaml
@@ -13,5 +13,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/478/stages/2736/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 05 Aug 2025 14:25:14 UTC"
+record: 1
